{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 16,
  "lineage": "b48de386-edab-eb2b-6365-3449211b4a9d",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/7c7d6a08-6630-41e6-9087-a19703fef514/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/demokhalil-lb/frontendIPConfigurations/demokhalil-public-ip-forLB",
                "name": "demokhalil-public-ip-forLB",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/7c7d6a08-6630-41e6-9087-a19703fef514/resourceGroups/Azuredevops/providers/Microsoft.Network/publicIPAddresses/demokhalil-public-ip-forLB"
              }
            ],
            "id": "/subscriptions/7c7d6a08-6630-41e6-9087-a19703fef514/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/demokhalil-lb",
            "location": "southcentralus",
            "name": "demokhalil-lb",
            "resource_group_name": "Azuredevops",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "envirement": "Development"
            }
          },
          "dependencies": [
            "azurerm_public_ip.second",
            "azurerm_resource_group.Azuredevops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7c7d6a08-6630-41e6-9087-a19703fef514/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/demokhalil-lb/backendAddressPools/demokhalil-lb-pool",
            "loadbalancer_id": "/subscriptions/7c7d6a08-6630-41e6-9087-a19703fef514/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/demokhalil-lb",
            "name": "demokhalil-lb-pool"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_public_ip.second",
            "azurerm_resource_group.Azuredevops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/7c7d6a08-6630-41e6-9087-a19703fef514/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/demokhalil-nic-0",
            "internal_domain_name_suffix": "roehwaftlh5u1izobv221f5awf.jx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/7c7d6a08-6630-41e6-9087-a19703fef514/resourceGroups/Azuredevops/providers/Microsoft.Network/publicIPAddresses/demokhalil-public-ip",
                "subnet_id": "/subscriptions/7c7d6a08-6630-41e6-9087-a19703fef514/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/demokhalil-vn/subnets/internal"
              }
            ],
            "location": "southcentralus",
            "name": "demokhalil-nic-0",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "Azuredevops",
            "tags": {
              "envirement": "Development"
            }
          },
          "dependencies": [
            "azurerm_public_ip.main",
            "azurerm_resource_group.Azuredevops",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7c7d6a08-6630-41e6-9087-a19703fef514/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/demokhalil-nsg",
            "location": "southcentralus",
            "name": "demokhalil-nsg",
            "resource_group_name": "Azuredevops",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-vms-access",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "envirement": "Development"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.Azuredevops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "deny-internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/7c7d6a08-6630-41e6-9087-a19703fef514/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/demokhalil-nsg/securityRules/deny-internet-access",
            "name": "deny-internet-access",
            "network_security_group_name": "demokhalil-nsg",
            "priority": 4096,
            "protocol": "*",
            "resource_group_name": "Azuredevops",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.Azuredevops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/7c7d6a08-6630-41e6-9087-a19703fef514/resourceGroups/Azuredevops/providers/Microsoft.Network/publicIPAddresses/demokhalil-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.225.178.192",
            "ip_version": "IPv4",
            "location": "southcentralus",
            "name": "demokhalil-public-ip",
            "resource_group_name": "Azuredevops",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "envirement": "Development"
            }
          },
          "dependencies": [
            "azurerm_resource_group.Azuredevops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "second",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/7c7d6a08-6630-41e6-9087-a19703fef514/resourceGroups/Azuredevops/providers/Microsoft.Network/publicIPAddresses/demokhalil-public-ip-forLB",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.225.83.206",
            "ip_version": "IPv4",
            "location": "southcentralus",
            "name": "demokhalil-public-ip-forLB",
            "resource_group_name": "Azuredevops",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "envirement": "Development"
            }
          },
          "dependencies": [
            "azurerm_resource_group.Azuredevops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/7c7d6a08-6630-41e6-9087-a19703fef514/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/demokhalil-vn/subnets/internal",
            "name": "internal",
            "resource_group_name": "Azuredevops",
            "virtual_network_name": "demokhalil-vn"
          },
          "dependencies": [
            "azurerm_resource_group.Azuredevops",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/22"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "007b888b-59b3-4dff-a32e-0d79cd97e0b5",
            "id": "/subscriptions/7c7d6a08-6630-41e6-9087-a19703fef514/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/demokhalil-vn",
            "location": "southcentralus",
            "name": "demokhalil-vn",
            "resource_group_name": "Azuredevops",
            "tags": {
              "envirement": "Development"
            }
          },
          "dependencies": [
            "azurerm_resource_group.Azuredevops"
          ]
        }
      ]
    }
  ]
}